public interface PoliticaDeRenovacion {
  boolean seRenueva();
  boolean estaVencida();
}
