@startuml
skinparam linetype ortho

' Modulo de entidades beneficiarias y necesidades.
' El detalle de Donacion, Bien y Contacto esta en dc_donacion.puml y dc_notificacion.puml

class EntidadBeneficiaria {
    id: Long
    razonSocial: String
    direccion: String
    telefono: String
    correosRepresentantes: List<String>
    necesidades: List<Necesidad>
    contactos: List<Contacto>
    medioPredeterminado: Contacto
    donacionesRecibidas: List<Donacion>
    ---
    registrarNecesidad(necesidad)
    registrarContacto(contacto, predeterminado)
    satisfaceNecesidad(donacion)
    getDonacionesUltimoTrimestre()
}

class Necesidad {
    id: Long
    descripcion: String
    cantidadesRequeridas: Map<Subcategoria, Integer>
    cantidadesSuplidas: Map<Subcategoria, Integer>
    fechaInicio: LocalDate
    fechaFin: LocalDate
    periodo: Periodo
    renovacion: PoliticaDeRenovacion
    ---
    registrarSuplido(bien)
    estaSatisfecha()
    seSatisfaceCon(bien)
    getRenovacion()
}

interface PoliticaDeRenovacion {
    seRenueva()
    estaVencida()
}

class SinRenovacion {
    seRenueva()
    estaVencida()
}

class RenovacionPeriodica {
    fechaInicio: LocalDate
    fechaFin: LocalDate
    periodo: Periodo
    ---
    seRenueva()
    estaVencida()
    calcularVencimiento()
}

enum Periodo {
    SEMANAL
    MENSUAL
}

interface Notificable
abstract Contacto
class Donacion
class Bien
enum Subcategoria

EntidadBeneficiaria .up.|> Notificable : implementa
EntidadBeneficiaria --> "*" Necesidad : declara
EntidadBeneficiaria --> "*" Donacion : recibe
EntidadBeneficiaria --> "*" Contacto : se contacta por
EntidadBeneficiaria --> Contacto : predetermina

Necesidad --> "*" Subcategoria : requiere
Necesidad --> PoliticaDeRenovacion : se renueva segun
Necesidad ..> Bien : se satisface con

SinRenovacion .up.|> PoliticaDeRenovacion : implementa
RenovacionPeriodica .up.|> PoliticaDeRenovacion : implementa
RenovacionPeriodica --> Periodo : tiene

@enduml
